--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "data"
+name = "mapas-brasil"
 version = "0.1.0"
 description = ""
 authors = ["tomast1337 <vycasnicolas@gmail.com>"]
