--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ lxml = "^5.3.1"
 shapely = "^2.0.7"
 svgpathtools = "^1.6.1"
 geopandas = "^1.0.1"
+cairosvg = "^2.7.1"
+pillow = "^11.1.0"
+unidecode = "^1.3.8"
 
 
 [build-system]
